[package]
name = "expand-range"
version = "0.1.0"
edition = "2021"
description = "generate numeric/alphabetic ranges with steps and zero-padding for brace expansion"
license = "MIT"
repository = "https://github.com/hey-jj/expand-range"
readme = "README.md"
keywords = ["range", "expand", "brace-expansion", "sequence", "regex"]
categories = ["text-processing", "command-line-interface"]

[dependencies]

# The library itself uses only std. The regex crate is test-only: the
# match-verification suite compiles each generated pattern and checks that it
# accepts exactly the integers in range.
[dev-dependencies]
regex = "1"
